# cpp-arkanoid

./: .gitignore  CMakeLists.txt  README.md  compile.cmd  run_build.cmd
cmake/Modules/: FindGMock.cmake
include/fw/arkanoid/: Game.h  ball.h  brick.h  dimension.h  game.h  insets.h  paddle.h  point.h  rectangle_base.h
nbproject/: configurations.xml  project.xml
src/: main.cc
